@@ -4,7 +4,8 @@ SHLIB = rstan.so
 
 USERLIB = libstan.a
 
-OBJECTS = stanc.o gm__grammars__whitespace_grammar_inst.o gm__grammars__program_grammar_inst.o gm__grammars__statement_grammar_inst.o  gm__ast_def.o gm__grammars__var_deccls_grammar_inst.o gm__grammars__expression_grammar_inst.o chains.o misc.o 
+OBJECTS = stanc.o chains.o misc.o
+OBJECTS += $(patsubst %.cpp,%.o,$(wildcard gm__*.cpp))
 
 LIBSTANOBJECTS = agrad__agrad.o agrad__matrix.o math__matrix.o
 
